2008-11-29  Curtis Gedak  <gedakc@gmail.com>

	* gparted-0.4.1
	  ===================================================

2008-11-28  Curtis Gedak  <gedakc@gmail.com>

	* gparted-0.4.0
	  ===================================================

2008-09-25  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Updated Swedish translation.

2008-09-19  Mario Blättermann  <mariobl@svn.gnome.org>

	* de/de.po: Added German translation.
	* Makefile.am: Added de to DOC_LINGUAS.

2008-09-14  Luca Ferretti  <elle.uca@libero.it>

	* it/it.po: Added Italian translation by Milo Casagrande.
	* Makefile.am: Added it to DOC_LINGUAS.

2008-09-12  Curtis Gedak  <gedakc@gmail.com>

	* gparted-0.3.9
	  ===================================================

2008-09-12  Jorge Gonzalez  <joregegonz@svn.gnome.org> 

	* es/es.po: Updated Spanish translation.   

2008-09-01  Curtis Gedak  <gedakc@gmail.com>

	* C/legal.xml: Deleted file
	  - The translation for the GFDL license should occur once only,
	    not for each and every project or application that uses the
	    license.
	  - Closes GParted bug #550047

	* Makefile.am,
	  C/Makefile.am: Removed legal.xml reference

	* C/gparted.xml: Removed legal.xml appendix
	  - Updated legal notice

2008-08-31  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es/es.po: Added Spanish translation.
	* Makefile.am: Added es to DOC_LINGUAS.

2008-08-08  Daniel Nylander <po@danielnylander.se>

	* sv/sv.po: Added Swedish translation.
	* Makefile.am: Added sv to DOC_LINGUAS.

2008-08-05  Curtis Gedak  <gedakc@gmail.com>

	* C/Makefile.am: Created initial makefile

	* C/legal.xml: Added license file

	* C/gparted.xml: Created initial (mostly empty) help manual

	* C: Created directory to contain English help manual files

	* figures: Created directory to contain images for manual

	* gparted.omf.in: Created base Object Metadata Framework file

	* Makefile.am: Created top level makefile

	* ChangeLog: Created ChangeLog file to track GParted Manual changes