@@ -54,9 +54,8 @@
         with no Invariant Sections, no Front-Cover Texts, and no Back-Cover
         Texts.  You can find a copy of the GFDL at this
         <ulink type="help" url="ghelp:fdl">link</ulink> or at
-        <ulink url="http://www.fsf.org/licensing/licenses/fdl.html">
-        http://www.fsf.org/licensing/licenses/fdl.html</ulink> or
-        in the file COPYING-DOCS distributed with this manual.
+        <ulink url="http://www.fsf.org/licensing/licenses/fdl.html">http://www.fsf.org/licensing/licenses/fdl.html</ulink>
+        or in the file COPYING-DOCS distributed with this manual.
       </para>
     </legalnotice>
 
