@@ -1,3 +1,8 @@
+2008-12-02  Curtis Gedak  <gedakc@gmail.com>
+
+	* C/gparted.xml: Removed doubled space in front of fdl link.
+	  - Closes GParted bug #561756
+
 2008-11-29  Curtis Gedak  <gedakc@gmail.com>
 
 	* gparted-0.4.1
